--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-query": "^3.34.14",
+    "react-spinners": "^0.11.0",
     "sass": "^1.49.7"
+  },
+  "devDependencies": {
+    "eslint": "^8.9.0"
   }
 }
